# raylib_pong

./: CMakeLists.txt  README.md  build.sh
src/: main.cpp
src/core/: Cleanup.cpp  Cleanup.h  Core.cpp  Core.h  Init.cpp  Init.h
src/game_objects/: Ball.cpp  Ball.h  Court.cpp  Court.h  GameObjects.h  Paddle.cpp  Paddle.h  Point.h
src/game_settings/: Screen.cpp  Screen.h
